[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycommon"
version = "0.0.1-alpha"
description = "Common Python utilities for AWS Lambda and API operations"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Jules White", email = "jules.white@vanderbilt.edu"},
    {name = "Allen Karns", email = "allen.karns@vanderbilt.edu"},
    {name = "Maximillian Moundas", email = "maximillian.r.moundas@Vanderbilt.Edu"},
    {name = "Karely Rodriguez", email = "Karely.Rodriguez@vanderbilt.edu"},
    {name = "Sam Hays", email = "gsamuelhays@gmail.com"}
]
keywords = ["aws", "lambda", "utilities", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Runtime dependencies (what your package needs to work)
dependencies = [
    "boto3>=1.38.32",
    "botocore>=1.38.32",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
    "python-jose>=3.5.0",
    "python-dotenv>=1.1.0",
    "jsonschema>=4.24.0",
]

# Optional dependencies for development
[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "mypy",
    "coverage>=7.8.2",
]

[project.urls]
Homepage = "https://github.com/gaiin-platform/pycommon"
Repository = "https://github.com/gaiin-platform/pycommon"
Issues = "https://github.com/gaiin-platform/pycommon/issues"

# Standard package discovery - finds pycommon and all subpackages
[tool.setuptools.packages.find]
where = ["."]
include = ["pycommon*"]
exclude = ["tests*", "htmlcov*", "venv*", "scripts*"]

# Include non-Python files
[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"] 